--- a/microwave.build_log.htm
+++ b/microwave.build_log.htm
@@ -4,32 +4,9 @@
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
 F:\Mostafa\Microwave\Project\microwave.uvproj
-Project File Date:  05/14/2022
+Project File Date:  05/17/2022
 
 <h2>Output:</h2>
-Rebuild target 'Target 1'
-assembling startup_TM4C123.s...
-compiling main.c...
-compiling Switch.c...
-compiling Tiva.c...
-compiling Microwave.c...
-compiling LCD.c...
-compiling Keypad.c...
-compiling Buzzer.c...
-compiling Timer.c...
-compiling Interrupt.c...
-compiling LED.c...
-linking...
-Program Size: Code=4540 RO-data=652 RW-data=28 ZI-data=516  
-".\microwave.axf" - 0 Error(s), 0 Warning(s).
-
-compiling Keypad.c...
-compiling Buzzer.c...
-compiling Timer.c...
-compiling Interrupt.c...
-compiling LED.c...
-linking...
-Program Size: Code=4620 RO-data=652 RW-data=28 ZI-data=516  
-".\microwave.axf" - 0 Error(s), 2 Warning(s).
-=652 RW-data=28 ZI-data=516  
-".\microwave.axf" - 0 Error(s), 3 Warning(s).
+</pre>
+</body>
+</html>
