--- a/microwave.build_log.htm
+++ b/microwave.build_log.htm
@@ -7,30 +7,22 @@ D:\#ASU\Repo\Project\microwave.uvproj
 Project File Date:  05/17/2022
 
 <h2>Output:</h2>
-Rebuild target 'Target 1'
-assembling startup_TM4C123.s...
-compiling main.c...
-compiling Switch.c...
-compiling Tiva.c...
+Build target 'Target 1'
 compiling Microwave.c...
-compiling LCD.c...
-compiling Keypad.c...
-compiling Buzzer.c...
+linking...
+Program Size: Code=4616 RO-data=652 RW-data=28 ZI-data=516  
+".\microwave.axf" - 0 Error(s), 0 Warning(s).
+</pre>
+</body>
+</html>
+iling Buzzer.c...
 compiling Timer.c...
 compiling Interrupt.c...
 compiling LED.c...
 linking...
-Program Size: Code=4596 RO-data=652 RW-data=28 ZI-data=516  
+Program Size: Code=4616 RO-data=652 RW-data=28 ZI-data=516  
 ".\microwave.axf" - 0 Error(s), 0 Warning(s).
 Load "D:\\#ASU\\Repo\\Project\\microwave.axf" 
-Connecting: Mode=JTAG, Speed=1000000Hz
-Erase Done.
-Programming Done.
-Verify OK.
-</pre>
-</body>
-</html>
-ect\\microwave.axf" 
 Connecting: Mode=JTAG, Speed=1000000Hz
 Erase Done.
 Programming Done.
