--- a/microwave.htm
+++ b/microwave.htm
@@ -3,11 +3,11 @@
 <title>Static Call Graph - [.\microwave.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image .\microwave.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5.03 [Build 76]: Last Updated: Wed May 18 19:37:06 2022
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5.03 [Build 76]: Last Updated: Sat May 21 14:07:54 2022
 <BR><P>
-<H3>Maximum Stack Usage =         92 bytes + Unknown(Functions without stacksize, Cycles, Untraceable Function Pointers)</H3><H3>
+<H3>Maximum Stack Usage =         88 bytes + Unknown(Functions without stacksize, Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
-__rt_entry_main &rArr; main &rArr; cook_Beef_or_Chicken &rArr; LCD_Show &rArr; LCD_Write &rArr; LCD_CMD &rArr; Systick_Wait_1ms
+__rt_entry_main &rArr; main &rArr; cook_Beef_or_Chicken &rArr; __aeabi_dmul
 <P>
 <H3>
 Functions with no stack information
@@ -370,8 +370,8 @@ Global Symbols
 <P><STRONG><a name="[dd]"></a>__rt_entry_postsh_1</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, rtentry2.o(.ARM.Collect$$rtentry$$00000009))
 
 <P><STRONG><a name="[85]"></a>__rt_entry_main</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, rtentry2.o(.ARM.Collect$$rtentry$$0000000D))
-<BR><BR>[Stack]<UL><LI>Max Depth = 92 + Unknown Stack Size
-<LI>Call Chain = __rt_entry_main &rArr; main &rArr; cook_Beef_or_Chicken &rArr; LCD_Show &rArr; LCD_Write &rArr; LCD_CMD &rArr; Systick_Wait_1ms
+<BR><BR>[Stack]<UL><LI>Max Depth = 88 + Unknown Stack Size
+<LI>Call Chain = __rt_entry_main &rArr; main &rArr; cook_Beef_or_Chicken &rArr; __aeabi_dmul
 </UL>
 <BR>[Calls]<UL><LI><a href="#[87]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;exit
 <LI><a href="#[86]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
@@ -1212,7 +1212,7 @@ Global Symbols
 </UL>
 
 <P><STRONG><a name="[86]"></a>main</STRONG> (Thumb, 162 bytes, Stack size 0 bytes, main.o(.text))
-<BR><BR>[Stack]<UL><LI>Max Depth = 92<LI>Call Chain = main &rArr; cook_Beef_or_Chicken &rArr; LCD_Show &rArr; LCD_Write &rArr; LCD_CMD &rArr; Systick_Wait_1ms
+<BR><BR>[Stack]<UL><LI>Max Depth = 88<LI>Call Chain = main &rArr; cook_Beef_or_Chicken &rArr; __aeabi_dmul
 </UL>
 <BR>[Calls]<UL><LI><a href="#[94]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;start
 <LI><a href="#[8c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;microwave_Init
@@ -1256,7 +1256,7 @@ Global Symbols
 </UL>
 
 <P><STRONG><a name="[8c]"></a>microwave_Init</STRONG> (Thumb, 40 bytes, Stack size 8 bytes, microwave.o(.text))
-<BR><BR>[Stack]<UL><LI>Max Depth = 36<LI>Call Chain = microwave_Init &rArr; LCD_Init &rArr; LCD_Clear_Display &rArr; LCD_CMD &rArr; Systick_Wait_1ms
+<BR><BR>[Stack]<UL><LI>Max Depth = 32<LI>Call Chain = microwave_Init &rArr; LCD_Init &rArr; LCD_Clear_Display &rArr; LCD_CMD
 </UL>
 <BR>[Calls]<UL><LI><a href="#[97]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;keypad_Init
 <LI><a href="#[9d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;interrupt_Init
@@ -1271,8 +1271,8 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[86]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
-<P><STRONG><a name="[9e]"></a>pause</STRONG> (Thumb, 118 bytes, Stack size 8 bytes, microwave.o(.text))
-<BR><BR>[Stack]<UL><LI>Max Depth = 44<LI>Call Chain = pause &rArr; LCD_Show &rArr; LCD_Write &rArr; LCD_CMD &rArr; Systick_Wait_1ms
+<P><STRONG><a name="[9e]"></a>pause</STRONG> (Thumb, 130 bytes, Stack size 8 bytes, microwave.o(.text))
+<BR><BR>[Stack]<UL><LI>Max Depth = 40<LI>Call Chain = pause &rArr; LCD_Show &rArr; LCD_Write &rArr; LCD_CMD
 </UL>
 <BR>[Calls]<UL><LI><a href="#[9f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;WhiteOn
 <LI><a href="#[a0]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LED_Clear
@@ -1297,7 +1297,7 @@ Global Symbols
 </UL>
 
 <P><STRONG><a name="[a3]"></a>End_Operation</STRONG> (Thumb, 60 bytes, Stack size 8 bytes, microwave.o(.text))
-<BR><BR>[Stack]<UL><LI>Max Depth = 44<LI>Call Chain = End_Operation &rArr; LCD_Show &rArr; LCD_Write &rArr; LCD_CMD &rArr; Systick_Wait_1ms
+<BR><BR>[Stack]<UL><LI>Max Depth = 40<LI>Call Chain = End_Operation &rArr; LCD_Show &rArr; LCD_Write &rArr; LCD_CMD
 </UL>
 <BR>[Calls]<UL><LI><a href="#[a5]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;stop_Beep
 <LI><a href="#[a4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;beep
@@ -1311,7 +1311,7 @@ Global Symbols
 </UL>
 
 <P><STRONG><a name="[a6]"></a>Time_Display</STRONG> (Thumb, 216 bytes, Stack size 8 bytes, microwave.o(.text))
-<BR><BR>[Stack]<UL><LI>Max Depth = 52<LI>Call Chain = Time_Display &rArr; End_Operation &rArr; LCD_Show &rArr; LCD_Write &rArr; LCD_CMD &rArr; Systick_Wait_1ms
+<BR><BR>[Stack]<UL><LI>Max Depth = 48<LI>Call Chain = Time_Display &rArr; End_Operation &rArr; LCD_Show &rArr; LCD_Write &rArr; LCD_CMD
 </UL>
 <BR>[Calls]<UL><LI><a href="#[9f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;WhiteOn
 <LI><a href="#[a3]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;End_Operation
@@ -1326,7 +1326,7 @@ Global Symbols
 </UL>
 
 <P><STRONG><a name="[94]"></a>start</STRONG> (Thumb, 20 bytes, Stack size 8 bytes, microwave.o(.text))
-<BR><BR>[Stack]<UL><LI>Max Depth = 60<LI>Call Chain = start &rArr; Time_Display &rArr; End_Operation &rArr; LCD_Show &rArr; LCD_Write &rArr; LCD_CMD &rArr; Systick_Wait_1ms
+<BR><BR>[Stack]<UL><LI>Max Depth = 56<LI>Call Chain = start &rArr; Time_Display &rArr; End_Operation &rArr; LCD_Show &rArr; LCD_Write &rArr; LCD_CMD
 </UL>
 <BR>[Calls]<UL><LI><a href="#[a6]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Time_Display
 </UL>
@@ -1334,7 +1334,7 @@ Global Symbols
 </UL>
 
 <P><STRONG><a name="[92]"></a>Cook_Time</STRONG> (Thumb, 136 bytes, Stack size 16 bytes, microwave.o(.text))
-<BR><BR>[Stack]<UL><LI>Max Depth = 52 + In Cycle
+<BR><BR>[Stack]<UL><LI>Max Depth = 48 + In Cycle
 <LI>Call Chain = Cook_Time &rArr;  Cook_Time (Cycle)
 </UL>
 <BR>[Calls]<UL><LI><a href="#[a7]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Check_Invalid
@@ -1363,7 +1363,7 @@ Global Symbols
 </UL>
 
 <P><STRONG><a name="[90]"></a>cook_Popcorn</STRONG> (Thumb, 34 bytes, Stack size 8 bytes, microwave.o(.text))
-<BR><BR>[Stack]<UL><LI>Max Depth = 44<LI>Call Chain = cook_Popcorn &rArr; LCD_Show &rArr; LCD_Write &rArr; LCD_CMD &rArr; Systick_Wait_1ms
+<BR><BR>[Stack]<UL><LI>Max Depth = 40<LI>Call Chain = cook_Popcorn &rArr; LCD_Show &rArr; LCD_Write &rArr; LCD_CMD
 </UL>
 <BR>[Calls]<UL><LI><a href="#[93]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Systick_Wait_ms
 <LI><a href="#[8d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Show
@@ -1372,8 +1372,8 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[86]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
-<P><STRONG><a name="[91]"></a>cook_Beef_or_Chicken</STRONG> (Thumb, 470 bytes, Stack size 56 bytes, microwave.o(.text))
-<BR><BR>[Stack]<UL><LI>Max Depth = 92<LI>Call Chain = cook_Beef_or_Chicken &rArr; LCD_Show &rArr; LCD_Write &rArr; LCD_CMD &rArr; Systick_Wait_1ms
+<P><STRONG><a name="[91]"></a>cook_Beef_or_Chicken</STRONG> (Thumb, 474 bytes, Stack size 56 bytes, microwave.o(.text))
+<BR><BR>[Stack]<UL><LI>Max Depth = 88<LI>Call Chain = cook_Beef_or_Chicken &rArr; __aeabi_dmul
 </UL>
 <BR>[Calls]<UL><LI><a href="#[ab]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_dmul
 <LI><a href="#[aa]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_i2d
@@ -1391,11 +1391,10 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[86]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
-<P><STRONG><a name="[b0]"></a>LCD_CMD</STRONG> (Thumb, 72 bytes, Stack size 8 bytes, lcd.o(.text))
-<BR><BR>[Stack]<UL><LI>Max Depth = 12<LI>Call Chain = LCD_CMD &rArr; Systick_Wait_1ms
+<P><STRONG><a name="[b0]"></a>LCD_CMD</STRONG> (Thumb, 84 bytes, Stack size 8 bytes, lcd.o(.text))
+<BR><BR>[Stack]<UL><LI>Max Depth = 8<LI>Call Chain = LCD_CMD
 </UL>
-<BR>[Calls]<UL><LI><a href="#[b1]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Systick_Wait_1ms
-<LI><a href="#[b2]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SysTick_Wait
+<BR>[Calls]<UL><LI><a href="#[b1]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SysTick_Wait
 </UL>
 <BR>[Called By]<UL><LI><a href="#[a8]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Write
 <LI><a href="#[98]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Init
@@ -1403,7 +1402,7 @@ Global Symbols
 </UL>
 
 <P><STRONG><a name="[8f]"></a>LCD_Clear_Display</STRONG> (Thumb, 16 bytes, Stack size 8 bytes, lcd.o(.text))
-<BR><BR>[Stack]<UL><LI>Max Depth = 20<LI>Call Chain = LCD_Clear_Display &rArr; LCD_CMD &rArr; Systick_Wait_1ms
+<BR><BR>[Stack]<UL><LI>Max Depth = 16<LI>Call Chain = LCD_Clear_Display &rArr; LCD_CMD
 </UL>
 <BR>[Calls]<UL><LI><a href="#[b0]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_CMD
 </UL>
@@ -1418,7 +1417,7 @@ Global Symbols
 </UL>
 
 <P><STRONG><a name="[98]"></a>LCD_Init</STRONG> (Thumb, 184 bytes, Stack size 8 bytes, lcd.o(.text))
-<BR><BR>[Stack]<UL><LI>Max Depth = 28<LI>Call Chain = LCD_Init &rArr; LCD_Clear_Display &rArr; LCD_CMD &rArr; Systick_Wait_1ms
+<BR><BR>[Stack]<UL><LI>Max Depth = 24<LI>Call Chain = LCD_Init &rArr; LCD_Clear_Display &rArr; LCD_CMD
 </UL>
 <BR>[Calls]<UL><LI><a href="#[b0]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_CMD
 <LI><a href="#[8f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Clear_Display
@@ -1426,10 +1425,10 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[8c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;microwave_Init
 </UL>
 
-<P><STRONG><a name="[a8]"></a>LCD_Write</STRONG> (Thumb, 62 bytes, Stack size 8 bytes, lcd.o(.text))
-<BR><BR>[Stack]<UL><LI>Max Depth = 20<LI>Call Chain = LCD_Write &rArr; LCD_CMD &rArr; Systick_Wait_1ms
+<P><STRONG><a name="[a8]"></a>LCD_Write</STRONG> (Thumb, 78 bytes, Stack size 8 bytes, lcd.o(.text))
+<BR><BR>[Stack]<UL><LI>Max Depth = 16<LI>Call Chain = LCD_Write &rArr; LCD_CMD
 </UL>
-<BR>[Calls]<UL><LI><a href="#[b1]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Systick_Wait_1ms
+<BR>[Calls]<UL><LI><a href="#[b1]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SysTick_Wait
 <LI><a href="#[b0]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_CMD
 </UL>
 <BR>[Called By]<UL><LI><a href="#[91]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Beef_or_Chicken
@@ -1437,9 +1436,9 @@ Global Symbols
 </UL>
 
 <P><STRONG><a name="[8d]"></a>LCD_Show</STRONG> (Thumb, 30 bytes, Stack size 16 bytes, lcd.o(.text))
-<BR><BR>[Stack]<UL><LI>Max Depth = 36<LI>Call Chain = LCD_Show &rArr; LCD_Write &rArr; LCD_CMD &rArr; Systick_Wait_1ms
+<BR><BR>[Stack]<UL><LI>Max Depth = 32<LI>Call Chain = LCD_Show &rArr; LCD_Write &rArr; LCD_CMD
 </UL>
-<BR>[Calls]<UL><LI><a href="#[b3]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;strlen
+<BR>[Calls]<UL><LI><a href="#[b2]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;strlen
 <LI><a href="#[a8]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Write
 </UL>
 <BR>[Called By]<UL><LI><a href="#[a6]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Time_Display
@@ -1473,25 +1472,24 @@ Global Symbols
 <BR><BR>[Called By]<UL><LI><a href="#[a3]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;End_Operation
 </UL>
 
-<P><STRONG><a name="[b2]"></a>SysTick_Wait</STRONG> (Thumb, 36 bytes, Stack size 0 bytes, timer.o(.text))
-<BR><BR>[Called By]<UL><LI><a href="#[b1]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Systick_Wait_1ms
+<P><STRONG><a name="[b1]"></a>SysTick_Wait</STRONG> (Thumb, 36 bytes, Stack size 0 bytes, timer.o(.text))
+<BR><BR>[Called By]<UL><LI><a href="#[b3]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Systick_Wait_1ms
 <LI><a href="#[b0]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_CMD
+<LI><a href="#[a8]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Write
 </UL>
 
-<P><STRONG><a name="[b1]"></a>Systick_Wait_1ms</STRONG> (Thumb, 12 bytes, Stack size 4 bytes, timer.o(.text))
+<P><STRONG><a name="[b3]"></a>Systick_Wait_1ms</STRONG> (Thumb, 12 bytes, Stack size 4 bytes, timer.o(.text))
 <BR><BR>[Stack]<UL><LI>Max Depth = 4<LI>Call Chain = Systick_Wait_1ms
 </UL>
-<BR>[Calls]<UL><LI><a href="#[b2]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SysTick_Wait
+<BR>[Calls]<UL><LI><a href="#[b1]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SysTick_Wait
 </UL>
-<BR>[Called By]<UL><LI><a href="#[b0]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_CMD
-<LI><a href="#[a8]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Write
-<LI><a href="#[93]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Systick_Wait_ms
+<BR>[Called By]<UL><LI><a href="#[93]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Systick_Wait_ms
 </UL>
 
 <P><STRONG><a name="[93]"></a>Systick_Wait_ms</STRONG> (Thumb, 20 bytes, Stack size 8 bytes, timer.o(.text))
 <BR><BR>[Stack]<UL><LI>Max Depth = 12<LI>Call Chain = Systick_Wait_ms &rArr; Systick_Wait_1ms
 </UL>
-<BR>[Calls]<UL><LI><a href="#[b1]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Systick_Wait_1ms
+<BR>[Calls]<UL><LI><a href="#[b3]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Systick_Wait_1ms
 </UL>
 <BR>[Called By]<UL><LI><a href="#[a6]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Time_Display
 <LI><a href="#[a3]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;End_Operation
@@ -1530,11 +1528,11 @@ Global Symbols
 
 <P><STRONG><a name="[e7]"></a>GreenToggle</STRONG> (Thumb, 16 bytes, Stack size 0 bytes, led.o(.text), UNUSED)
 
-<P><STRONG><a name="[9d]"></a>interrupt_Init</STRONG> (Thumb, 142 bytes, Stack size 0 bytes, interrupt.o(.text))
+<P><STRONG><a name="[9d]"></a>interrupt_Init</STRONG> (Thumb, 74 bytes, Stack size 0 bytes, interrupt.o(.text))
 <BR><BR>[Called By]<UL><LI><a href="#[8c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;microwave_Init
 </UL>
 
-<P><STRONG><a name="[b3]"></a>strlen</STRONG> (Thumb, 62 bytes, Stack size 8 bytes, strlen.o(.text))
+<P><STRONG><a name="[b2]"></a>strlen</STRONG> (Thumb, 62 bytes, Stack size 8 bytes, strlen.o(.text))
 <BR><BR>[Stack]<UL><LI>Max Depth = 8<LI>Call Chain = strlen
 </UL>
 <BR>[Called By]<UL><LI><a href="#[8d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Show
